2007-04-04  Tim Moore  <timoore@redhat.com>

	* LinuxPtraceTask.java (fillMemory): Allocate PtraceByteBuffer with
	'unsigned' long (-1) length.

2007-04-03  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Replace frysk.sys.Poll.Observer with
	frysk.sys.PollBuilder.

2007-04-02  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (FailWaitObserver, IgnoreWaitObserver): Delete, use
	UnhandledWaitBuilder and Wait.drain.
	
	* Manager.java: Use PollEventLoop.

2007-03-29  Andrew Cagney  <cagney@redhat.com>

	* LinuxPtraceHost.java: Replace frysk.sys.Wait.Observer with
	frysk.sys.WaitBuilder.
	* TestLib.java: Ditto.

2007-03-28  Mark Wielaard  <mark@klomp.org>

	* Host.java (logger): Use fully qualified frysk.proc for getLogger().
	* IsaFactory.java (logger): Likewise.
	* LinuxPPC.java (logger): Likewise.
	* LinuxPPC64.java (logger): Likewise.
	* Proc.java (logger): Likewise.
	* ProcEvent.java (logger): Likewise.
	* ProcTasksObserver.java (logger): Likewise.
	* State.java (logger): Likewise.
	* Task.java (logger): Likewise.
	* TaskEvent.java (logger): Likewise.
	* TestLib.java (logger): Likewise.

2007-03-28  Mark Wielaard  <mark@klomp.org>

	* LinuxPtraceTaskState.java (attaching):
	Add handleUnblock, handleAddObservation and handleDeleteObservation.
	(Attached): Add handleTerminatedEvent.

2007-03-27  Andrew Cagney  <cagney@redhat.com>

	* TestRefresh.java (testRefreshZombie): Add 2.6.20-1.2307.fc5 to
	broken list.

2007-03-23  Phil Muldoon  <pmuldoon@redhat.com>

	* TestLinuxCore.java: Fix debug output.
	Rewrite Class. Use one host, and refresh each test.
	* LinuxCoreFileTask.java: Fix build typos.

2007-03-23  Phil Muldoon  <pmuldoon@redjat.com>

	* TestLinuxCore.java: New.
	* LinuxCoreFileTaskState.java: New.
	* LinuxCoreFileTask.java:New.
	* LinuxCoreFileHostState.java: New.
	* LinuxCoreFileHost.java:New.
	* LinuxCoreFileProcState.java: New.
	* LinuxCoreFileProc.java: New.

	* TestIsa.java: Changed to call getIsaForCoreFile.